--- a/app/views/templates/_breadcrumb.html.slim
+++ b/app/views/templates/_breadcrumb.html.slim
@@ -1,5 +1,6 @@
-.ui.small.breadcrumb
-  = link_to 'TOP', root_path
-  - breadcrumb.each do |page, url|
-    i.right.chevron.icon.divider
-    = link_to page, url
+.ui.container
+  .ui.small.breadcrumb
+    = link_to 'TOP', root_path
+    - breadcrumb.each do |page, url|
+      i.right.chevron.icon.divider
+      = link_to page, url
