--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -7,3 +7,29 @@
     padding: 2em 0;
   }
 }
+
+.entries.show {
+  body {
+    background: #fff;
+  }
+
+  .main {
+    &.container {
+      margin-top: 2em
+    }
+
+    &.menu {
+      margin-top: 4em;
+      border-radius: 0;
+      border: none;
+      box-shadow: none;
+      transition: box-shadow 0.5s ease, padding 0.5s ease;
+
+      &.fixed {
+        background: #fff;
+        border: 1px solid #ddd;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+      }
+    }
+  }
+}
