--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,6 @@
-= form_for([entry, entry.comments.build], remote: true, class: 'ui reply form') do |cf|
+= form_for([entry, entry.comments.build], remote: true, html: { class: 'ui reply form' }) do |cf|
   .field
     = cf.text_area :body, placeholder: 'コメント本文'
-  = cf.submit 'コメントする', class: 'ui primary submit button'
+  = button_tag type: 'submit', class: 'ui blue labeled submit icon button' do
+    i.icon.edit
+    | コメントする
