--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,4 +1,4 @@
-.comment
+.comment id="#{comment.id}"
   .avatar
     = image_tag 'anonymous.png'
   .content
@@ -7,6 +7,6 @@
     .metadata
       .date = distance_of_time_in_words_to_now(comment.created_at)
     .text
-      p = comment.body
+      = comment.body
     .actions
-      a.reply Reply
+      a.reply(data-reply="#{comment.from}") Reply
