--- a/app/views/entries/edit.html.slim
+++ b/app/views/entries/edit.html.slim
@@ -31,10 +31,17 @@
     .field
       label.label.required = f.label :body, '本文'
       = f.text_area :body, rows: 8, placeholder: '本文'
-    
-    .field
-      .ui.checkbox
-        = f.check_box :is_draft, tabindex: 0, class: 'hidden'
-        label 記事をまだ公開しませんか?
+
+    .two.fields
+      .field
+        .ui.right.labeled.left.icon.input
+          i.tags.icon
+          = f.text_field :tag_list
+          a.ui.tag.label 追加
+          
+      .field
+        .ui.checkbox
+          = f.check_box :is_draft, tabindex: 0, class: 'hidden'
+          label 記事を非公開にしますか?
       
     = f.submit '更新する', class: 'ui button'
