--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -18,7 +18,7 @@
     = image_tag 'noimage.png', class: 'large ui centered image preview-image'
     .field
       label.label.required = f.label :image, 'イメージ'
-      = f.file_field :image
+      = f.file_field :image, id: 'watch-image'
 
     .field
       label.label.required = f.label :title, 'タイトル'
