--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require jquery-ui
  *= require_self
  */
 
@@ -22,4 +23,8 @@ body {
   .breadcrumb {
     padding: 1em;
   }
+}
+
+.username {
+  margin-left: .5em;
 }
