--- a/app/views/templates/_header.html.slim
+++ b/app/views/templates/_header.html.slim
@@ -5,10 +5,14 @@
     = link_to 'Company', root_path, class: 'item'
     .right.menu
       - if user_signed_in?
-        .item
-          = link_to 'マイページ', me_path, class: 'ui button'
-        .item
-          = link_to 'ログアウト', destroy_user_session_path, class: 'ui danger button'
+        .ui.right.floated.dropdown.item
+          = image_tag current_user.avatar_url(:thumb), class: 'ui avatar image'
+          b.username = current_user.name
+          i.dropdown.icon
+          .menu
+            = link_to 'マイページ', me_path, class: 'item'
+            = link_to 'プロフィール編集', edit_user_path, class: 'item'
+            = link_to 'ログアウト', destroy_user_session_path, class: 'item'
       - else
         .item
           = link_to 'ログイン', new_user_session_path, class: 'ui button'
