コメントフォーム

--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -9,4 +9,4 @@
     .text
       = comment.body
     .actions
-      a.reply(data-reply="#{comment.from}") Reply
+      a.reply data-reply="#{comment.from}" Reply
