--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -17,7 +17,7 @@
   = @entry.body
 
 .ui.text.container
-  .ui.minimal.comments
+  .ui.threaded.comments
     h3.ui.dividing.header コメント一覧
     .comments-container
       - @entry.comments.each do |comment|
