--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,6 +1,16 @@
 = form_for([entry, entry.comments.build], remote: true, html: { class: 'ui reply form' }) do |cf|
   .field
     = cf.text_area :body, placeholder: 'コメント本文'
-  = button_tag type: 'submit', class: 'ui blue labeled submit icon button' do
-    i.icon.edit
-    | コメントする
+  .ui.grid.relaxed
+    .four.wide.column
+      - if user_signed_in?
+        = image_tag current_user.avatar_url(:thumb), class: 'ui avatar image'
+      - else
+        = image_tag 'anonymous.png', class: 'ui avatar image'
+    .six.wide.column
+      .field
+        = cf.text_field :from, value: current_user.name || '名無し'
+    .six.wide.column
+      = button_tag type: 'submit', class: 'ui blue labeled submit icon button' do
+        i.icon.edit
+        | コメントする
