--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -6,11 +6,11 @@
     - else
       = image_tag comment.avatar
   .content
-    .author
+    a.author
       = comment.from
     .metadata
       .date = distance_of_time_in_words_to_now(comment.created_at)
     .text
       = comment.body
     .actions
-      a.reply data-reply="#{comment.from}" Reply
+      a.reply.comment-reply data-reply="#{comment.from}" Reply
