--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -8,10 +8,11 @@
         | コメントする
     .six.wide.column
       .field
-        = cf.text_field :from, value: current_user.name || '名無し'
+        = cf.text_field :from, value: current_user.try(:name) || '名無し'
     .four.wide.column
       - if user_signed_in?
         = image_tag current_user.avatar_url(:thumb), class: 'ui avatar image'
+        = cf.hidden_field :avatar, value: current_user.avatar_url(:thumb)
       - else
         = image_tag 'anonymous.png', class: 'ui avatar image'
-      = cf.hidden_field :avatar, value: current_user.avatar_url(:thumb) || asset_path('anonymous.png')
+        = cf.hidden_field :avatar, value: asset_path('anonymous.png')
