--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -32,18 +32,11 @@
       margin-top: 2em
     }
 
-    &.menu {
-      margin-top: 4em;
+    .menu {
       border-radius: 0;
       border: none;
       box-shadow: none;
       transition: box-shadow 0.5s ease, padding 0.5s ease;
-
-      &.fixed {
-        background: #fff;
-        border: 1px solid #ddd;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
-      }
     }
 
     .entry-body {
