--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,9 @@ body {
 .username {
   margin-left: .5em;
 }
-
+.top-bottom {
+  margin: 3em 0;
+}
 .css1 { font-size: 1.0em; }
 .css2 { font-size: 1.2em; }
 .css3 { font-size: 1.4em; }
