--- a/app/views/entries/edit.html.slim
+++ b/app/views/entries/edit.html.slim
@@ -28,9 +28,18 @@
       label.label.required = f.label :title, 'タイトル'
       = f.text_field :title, placeholder: '記事のタイトル'
     
-    .field
-      label.label.required = f.label :body, '本文'
-      = f.text_area :body, rows: 8, placeholder: '本文'
+    .ui.top.attached.tabular.menu.md-view-tab
+      a.active.item data-type='text' テキスト
+      a.item data-type='view' プレビュー
+      a.item data-type='diff' 変更箇所
+
+    .ui.bottom.attached.segment.md-view-field
+      .text-view
+        = f.text_area :body, rows: 8, placeholder: '本文'
+      .md-view
+
+      .diff-view
+
 
     .two.fields
       .field
