--- a/app/views/templates/_head.html.slim
+++ b/app/views/templates/_head.html.slim
@@ -1,4 +1,4 @@
-/= include_gon
+= include_gon
 = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
 = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
