--- a/app/views/entries/_like.html.slim
+++ b/app/views/entries/_like.html.slim
@@ -4,14 +4,14 @@ span.left.floated.like
       - like = Like.find_by(user_id: current_user.id, entry_id: entry.id)
       = link_to entry_like_path(like, entry_id: entry.id), method: :delete, id: 'like-button', remote: true do
         i.like.liked.icon
-        = entry.like_count
+        = entry.likes_count
         | Likes
     - else
       = link_to entry_likes_path(entry), id: 'like-button', method: :post, remote: true do
         i.like.icon
-        = entry.like_count
+        = entry.likes_count
         | Likes
   - else
     i.like.icon
-    = entry.like_count
+    = entry.likes_count
     | Likes
