--- a/app/views/entries/index.html.slim
+++ b/app/views/entries/index.html.slim
@@ -1,22 +1,31 @@
 .ui.container
-  - @entries.each do |entry|
-    .ui.card id="entry-#{entry.id}"
-      .content
-        .header
-          = link_to entry.title, entry_path(entry)
-        .meta
-          span = distance_of_time_in_words_to_now(entry.created_at)
-          / ここにタグ
-        .description
-          p = entry.body
-      .extra.content
-      
-        /i.eye.icon
-        /= "#{entry.view} Views"
-        .like-field
-          == render partial: 'entries/like', locals: { entry: entry }
-        .right.floated.author
-          = image_tag 'anonymous.png', class: 'entry-author-image'
-          | Matt
+  .ui.special.cards
+    - @entries.each do |entry|  
+      .ui.card id="entry-#{entry.id}"
+        .content
+          .right.floated.meta
+            = distance_of_time_in_words_to_now(entry.created_at)
+            | 前
+          = image_tag entry.user.avatar_url(:thumb), class: 'ui avatar image'
+          = entry.user.name
+          .header(style='margin-top: 5px;') = entry.title
+        .blurring.dimmable.image
+          .ui.dimmer
+            .content
+              .center
+                = link_to '詳細', entry_path(entry), class: 'ui inverted button'
+          = image_tag entry.image_url(:medium)
+        /.image
+        /  = image_tag entry.image_url(:medium)
+        .content
+          .description
+            = truncate(entry.body, length: 100)
+        .extra.content
+          span.right.floated
+            i.eye.icon
+            = "#{entry.view} Views"
+          .like-field
+            == render partial: 'entries/like', locals: { entry: entry }
+
 
 = paginate @entries
