--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -4,17 +4,23 @@
   - if @entry.image.present?
     = image_tag @entry.image.url(:large), class: 'ui fluid image'
 
-.ui.menu
+.ui.secondary.menu
   .ui.text.container
-    .item
+    a.item
       i.calendar.outline.icon
       = l @entry.created_at, format: :short
-    - @entry.tags.each do |tag|
-      = link_to "#{tag.name}(#{tag.taggings_count})", entries_path(tag: tag.name), class: 'item'
-    .ui.right.item
-      span(style='margin-right:5px') Written By
-      = image_tag @entry.user.avatar_url(:thumb), class: 'ui avatar image'
-      span = @entry.user.name
+    .item
+      .ui.tag.labels
+        - @entry.tags.each do |tag|
+          = link_to "#{tag.name}", entries_path(tag: tag.name), class: 'ui label'
+    .right.item
+      .item
+        span(style='margin-right:5px') Written By
+        = image_tag @entry.user.avatar_url(:thumb), class: 'ui avatar image'
+        span = @entry.user.name
+
+.ui.text.container
+
 
 .ui.text.container.entry-body
   = @entry.body
