--- a/app/views/templates/_head.html.slim
+++ b/app/views/templates/_head.html.slim
@@ -1,6 +1,6 @@
 = include_gon
-= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-= javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+= stylesheet_link_tag 'application', media: 'all'
+= javascript_include_tag 'application'
 
 = csrf_meta_tags
 / - if content_for(:page_title)
