--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -1,3 +1,6 @@
+- content_for :header do
+  = render 'templates/breadcrumb', breadcrumb: { "#{@entry.title}": entry_path(@entry) }
+
 .ui.text.container
   h1.ui.header = @entry.title
 
