--- a/app/views/templates/_header.html.slim
+++ b/app/views/templates/_header.html.slim
@@ -4,6 +4,12 @@
     = link_to 'Work', root_path, class: 'item'
     = link_to 'Company', root_path, class: 'item'
     .right.menu
+      .item
+        = form_tag '/', method: :get, enforce_utf8: false, class: 'ui action transparent input' do
+          = text_field_tag :q, '', placeholder: 'Search...'
+          = button_tag type: 'submit', class: 'ui button', class: 'ui teal right icon button' do
+            i.search.icon
+        
       - if user_signed_in?
         .ui.right.floated.dropdown.item
           = image_tag current_user.avatar_url(:thumb), class: 'ui avatar image'
