--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,3 +1,6 @@
+- content_for :header do
+  = render 'templates/breadcrumb', breadcrumb: { "#{@user.name}": user_path(@user) }
+
 .ui.text.container.top-bottom
   .ui.stackable.borderless.menu
     .item
